Fix border gaps by allowing borders to collapse. Fix row sizing.

--- a/style.css
+++ b/style.css
@@ -132,11 +132,12 @@ section + section {
 
 table {
   width: 100%;
+  border-collapse: collapse;
 }
 
 tr {
   td {
-    padding: 0.5rem 1.5rem;
+    padding: 0.75rem 1.5rem;
     width: 50%;
 
     + td {
